objects/vaultp1__c.object
<CustomObject>
    <fields>
        <fullName>checkbox10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>currency1__c</fullName>
        <label>Currency1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currency2__c</fullName>
        <label>Currency2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date1__c</fullName>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date2__c</fullName>
        <label>Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateTime1__c</fullName>
        <label>Date/Time1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dateTime2__c</fullName>
        <label>Date/Time2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email10__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Email10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email1__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email2__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>encryptedText1__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>EncryptedText 1</label>
        <length>160</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>encryptedText2__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>EncryptedText 2</label>
        <length>160</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>geo1__c</fullName>
        <label>Geolocation1</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geo2__c</fullName>
        <label>Geolocation2</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>longTextArea1__c</fullName>
        <label>LongTextArea1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextArea2__c</fullName>
        <label>LongTextArea2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>number10__c</fullName>
        <label>Number10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number11__c</fullName>
        <label>Number11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number12__c</fullName>
        <label>Number12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent10__c</fullName>
        <label>Percent10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percent1__c</fullName>
        <label>Percent1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percent2__c</fullName>
        <label>Percent2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone10__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone2__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>richTextArea1__c</fullName>
        <label>Rich Text Area1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>richTextArea2__c</fullName>
        <label>Rich Text Area2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>text10__c</fullName>
        <label>Text10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text11__c</fullName>
        <label>Text11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text12__c</fullName>
        <label>Text12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textArea1__c</fullName>
        <label>Text Area1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>textArea2__c</fullName>
        <label>Text Area2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>url10__c</fullName>
        <label>URL10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>url1__c</fullName>
        <label>URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>url2__c</fullName>
        <label>URL2</label>
        <type>Url</type>
    </fields>
    <label>vaultp1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>number1__c</columns>
        <columns>text2__c</columns>
        <columns>text4__c</columns>
        <columns>text3__c</columns>
        <columns>text1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>text2__c</field>
            <operation>startsWith</operation>
            <value>ARAR</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultp1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>